fix gap header after login

--- a/src/Components/pages/Header/site-header.module.css
+++ b/src/Components/pages/Header/site-header.module.css
@@ -86,6 +86,7 @@
 }
 .headerDropdownContainer {
     display: flex;
+    gap: 1em;
     justify-content: center;
     align-items: center;
     margin-right: 1em;
